// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomInput Component renders correctly with default props 1`] = `
<View
  style={
    {
      "marginBottom": 16,
      "width": "100%",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "elevation": 1,
          "flexDirection": "row",
          "height": 52,
          "paddingHorizontal": 12,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.05,
          "shadowRadius": 2,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E0E0E0",
        },
      ]
    }
  >
    <TextInput
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Test input"
      placeholderTextColor="#999999"
      style={
        [
          {
            "flex": 1,
            "fontSize": 16,
            "height": "100%",
          },
          {
            "color": "#11181C",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`CustomInput Component renders correctly with label and error 1`] = `
<View
  style={
    {
      "marginBottom": 16,
      "width": "100%",
    }
  }
>
  <Text
    style={
      [
        {
          "fontSize": 14,
          "fontWeight": "600",
          "marginBottom": 6,
        },
        {
          "color": "#666666",
        },
      ]
    }
  >
    Email
  </Text>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "borderWidth": 1.5,
          "elevation": 1,
          "flexDirection": "row",
          "height": 52,
          "paddingHorizontal": 12,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.05,
          "shadowRadius": 2,
        },
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#FF3B30",
        },
      ]
    }
  >
    <Text />
    <TextInput
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Enter email"
      placeholderTextColor="#999999"
      style={
        [
          {
            "flex": 1,
            "fontSize": 16,
            "height": "100%",
          },
          {
            "color": "#11181C",
          },
          undefined,
        ]
      }
    />
  </View>
  <Text
    style={
      {
        "color": "#FF3B30",
        "fontSize": 12,
        "fontWeight": "500",
        "marginTop": 4,
      }
    }
  >
    Email is invalid
  </Text>
</View>
`;
